Use nio file API in pcal.trans
Signed-off-by: Andrew Helwer <2n8rn1w1f@mozmail.com>